--- a/aula04/ex001..html
+++ b/aula04/ex001..html
@@ -25,6 +25,7 @@
     <h1>Olá, mundo!</h1>
     <p>Já me livrei da anátema</p>
     <h2>Hello, world!</h2>
+    <h3>Live server é top, muito obrigado</h3>
     <script>
         // window.alert("Minha mensagem, não é a primeira")
         // window.confirm("Está gostando de JavaScript?")
